<resources>
    <string name="app_name">Quick Match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches_string">Matchs</string>
    <string name="stats_string">Stats</string>
    <string name="club_string">Clubs</string>
    <string name="agenda_string">Agenda</string>
    <string name="settings_string">Settings</string>
    <string name="desc_logo">Logo QuickMatch</string>
    <string name="text_app_desc">Organisez vos matchs d\'un seul clic !</string>
    <string name="text_login">Se connecter</string>
    <string name="text_signin">S\'inscrire</string>
    <string name="text_desc_login">Connexion à Quick Match</string>
    <string name="text_login_google">Se connecter avec Google</string>
    <string name="hint_password">Mot de passe *</string>
    <string name="hint_mail">Adresse mail *</string>
    <string name="text_forgot_password">Mot de passe oublié ?</string>
    <string name="text_desc_signin">S\'inscrire à Quick Match</string>
    <string name="hint_confirm_password">Confimez votre mot de passe *</string>
    <string name="hint_phone_number">N° de téléphone (Optionnel)</string>
    <string name="hint_pseudo">Pseudo *</string>
    <string name="hint_firstname">Prénom *</string>
    <string name="hint_name">Nom *</string>
    <string name="text_signin_google">S\'inscrire avec Google</string>
    <string name="test_text">Test</string>
    <string name="text_login_status">Login Status</string>
    <string name="web_client_id">500794569311-jae4cb2ru0iublp07lt5mralkm5om5fu.apps.googleusercontent.com</string>
    <string name="text_signin_status">Signin status</string>
    <string name="text_mandatory">* Champ obligatoire</string>
    <string name="welcome_text">Welcome to QuickMatch !</string>
    <string name="infos_text">Infos</string>
    <string name="none_text">Aucun</string>
    <string name="mail_tool">toto@tata.com</string>
    <string name="settings_text">Préférences</string>
    <string name="language_text">Langue</string>
    <string name="notification_text">Moyen de notification</string>
    <string name="profile_text">Profil</string>
    <string name="edit_profile_text">Modifier mon profil</string>
    <string name="mail_address">Adresse Mail</string>
    <string name="phone_number">N° de téléphone</string>
    <string name="pseudo">Pseudo</string>
    <string name="first_name">Prénom</string>
    <string name="nom">Name</string>
    <string name="bio">Bio</string>
    <string name="avatar_url">URL de votre avatar</string>
    <string name="text_preview">Preview</string>
    <string name="english">Anglais</string>
    <string name="french">Français</string>
    <string name="mail">Mail</string>
    <string name="sms">SMS</string>
    <string name="text_privacy">Privé</string>
    <string name="created">Créé le :</string>
    <string name="create_club">Créer un club</string>
    <string name="club_name">Nom du club</string>
    <string name="private_club">Club privé</string>
    <string name="create_the_club">Créer le club</string>
    <string name="text_check">Vérifier les informations</string>
    <string name="search_hint">Rechercher</string>
    <string name="empty_clubs_join">Vous ne pouvez rejoindre aucun nouveau club...</string>
    <string name="joined">Membre depuis le :</string>
    <string name="no_club">Vous n\'êtes membre d\'aucun club...</string>
    <string name="text_members">Membres :</string>
    <string name="text_leave">Quitter le club</string>
    <string name="text_name_firstname_pseudo">Nom Prénom (Pseudo)</string>
    <string name="three_dot_text"><![CDATA[&#8942;]]></string>
    <string name="invitations_text">Invitations</string>
    <string name="start_hour_text">Heure de début</string>
    <string name="end_hour_text">Heure de fin</string>
    <string name="location_text">Localisation</string>
    <string name="number_players_text">Taille des équipes :</string>
    <string name="min_text">Minimum</string>
    <string name="max_text">Maximum</string>
    <string name="monday_text">Lundi</string>
    <string name="tuesday_text">Mardi</string>
    <string name="wednesday_text">Mercredi</string>
    <string name="thursday_text">Jeudi</string>
    <string name="friday_text">Vendredi</string>
    <string name="saturday_text">Samedi</string>
    <string name="sunday_text">Dimanche</string>
    <string name="repeat_day_text">Jour(s) et nombre de répétitions :</string>
    <string name="create_match_text">Créer le match</string>
    <string name="date_match_text">Date du match</string>
    <string name="number_of_repetitions_text">Nombre de répétitions</string>
    <string name="warning_match_creation">Il reste des champs à remplir !

        <b>Un club, une date et les heures de début et de fin sont requis.

    De même, au moins un jour est requis.</b></string>
    <string name="success_match_creation">Match créé avec succès !</string>
    <string name="work_ongoing_text">En construction...</string>
    <string name="change">MODIFIER</string>
    <string name="play_text">JOUER</string>
    <string name="finish_match_text">Terminer le match</string>
    <string name="send_meetsheet_text">Envoyer la feuille de match</string>
    <string name="text_team1">Equipe 1</string>
    <string name="text_team2">Equipe 2</string>
    <string name="text_hyphen">-</string>
    <string name="text_goals">Buts</string>
    <string name="text_score">Score du match</string>
    <string name="text_players_stats">Stats des joueurs</string>
    <string name="scored_goals"><b>Buts marqués : </b></string>
    <string name="conceded_goals"><b>Buts encaissés : </b></string>
    <string name="total_victories"><b>Nombre de victoires : </b></string>
    <string name="total_matches"><b>Nombre de matchs joués : </b></string>

</resources>
